# flows-tools

./: .gitignore  LICENSE  README.md  Untitled.ipynb  catalogs.py  check_background.py  cutouts.py  fetch_eso_data.py  fixlcogt.py  flows_photometry.py  pyproject.toml  read_eso_data.py  run_get_brightest.py
.github/workflows/: publish_empty_release.yml  python-package.yml  python-publish.yml
Notebooks/: 0.extract_lc_files.ipynb  1.fit_sne.ipynb  2.hubble_diagram.ipynb  combine_images.ipynb  image_cutout.ipynb
flows_finder/: README.md  __init__.py  __main__.py  argparser.py  catalogs.py  corner.py  instruments.py  make_fc.py  observer.py  plan.py  plots.py  run_get_brightest.py  target.py  tests.py  utils.py  version.py
flows_get_brightest/: __init__.py  __main__.py  argparser.py  auth.py  catalogs.py  corner.py  instruments.py  observer.py  parser.py  plan.py  plots.py  run_get_brightest.py  target.py  tests.py  utils.py  version.py
flows_get_brightest/tests/: end_to_end.py
get_brightest/: plots.py  run_get_brightest.py
typings/astropy/: __init__.pyi  _version.pyi  conftest.pyi  logger.pyi  version.pyi
typings/astropy/_erfa/: __init__.pyi
typings/astropy/config/: __init__.pyi  affiliated.pyi  configuration.pyi  paths.pyi
typings/astropy/constants/: __init__.pyi  cgs.pyi  config.pyi  constant.pyi  si.pyi  utils.pyi
typings/astropy/convolution/: __init__.pyi  convolve.pyi  core.pyi  kernels.pyi  utils.pyi
typings/astropy/coordinates/: __init__.pyi  angle_formats.pyi  angle_utilities.pyi  angles.pyi  attributes.pyi  baseframe.pyi  calculation.pyi  distances.pyi  earth.pyi  earth_orientation.pyi  erfa_astrom.pyi  errors.pyi  funcs.pyi  jparser.pyi  matching.pyi  matrix_utilities.pyi  name_resolve.pyi  representation.pyi  sites.pyi  sky_coordinate.pyi  sky_coordinate_parsers.pyi  solar_system.pyi  spectral_coordinate.pyi  spectral_quantity.pyi  (+1 more)
typings/astroquery/: __init__.pyi  _astropy_init.pyi  exceptions.pyi  logger.pyi  query.pyi  version.pyi
typings/erfa/: __init__.pyi  core.pyi  helpers.pyi  ufunc.pyi  version.pyi
typings/matplotlib/: __init__.pyi  _fontconfig_pattern.pyi  _layoutgrid.pyi  _mathtext.pyi  _path.pyi  _tight_layout.pyi  _tri.pyi  animation.pyi  artist.pyi  axis.pyi  backend_bases.pyi  backend_managers.pyi  backend_tools.pyi  blocking_input.pyi  cm.pyi  collections.pyi  colorbar.pyi  colors.pyi  contour.pyi  dates.pyi  dviread.pyi  figure.pyi  font_manager.pyi  fontconfig_pattern.pyi  gridspec.pyi  image.pyi  legend.pyi  legend_handler.pyi  mlab.pyi  offsetbox.pyi  patches.pyi  path.pyi  pylab.pyi  pyplot.pyi  quiver.pyi  table.pyi  texmanager.pyi  text.pyi  ticker.pyi  transforms.pyi  (+2 more)
typings/regions/: __init__.pyi  _astropy_init.pyi  compiler_version.pyi  version.pyi
typings/tendrils/: __init__.pyi  version.pyi
(+453 files in other folders)
