[build-system]
requires = ["flit_core >=3.5,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "flows_get_brightest"
authors = [{name = "Emir Karamehmetoglu", email = "emir.k@phys.au.dk"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]
requires-python = '>=3.8'
dependencies = [
    "requests",
    "tendrils",
    "astropy>=2.3.1",
    "numpy>=1.19.1",
    "regions",
    "astroquery>=0.4.5",
    "matplotlib"]

[project.urls]
Home = "https://github.com/SNflows/flows-tools/"

[project.scripts]
get_brightest = "flows_get_brightest:main"
