[build-system]
requires = ["flit_core >=3.5,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "flows_finder"
authors = [{name = "Emir Karamehmetoglu", email = "emir.k@phys.au.dk"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]
requires-python = '>=3.10'
dependencies = [
    "requests",
    "tendrils",
    "astropy>=2.3.1",
    "numpy>=1.19.1",
    "regions",
    "astroquery>=0.4.5",
    "matplotlib"]

[project.urls]
Home = "https://github.com/SNflows/flows-tools/"

[project.scripts]
get_brightest = "flows_finder:main"

[project.optional-dependencies]
test = [
  "pytest >= 7.1.1",
  "pytest-cov >= 4.0.0",
  "mypy >= 0.991",
  "flake8 >= 5.0.0",
  "black >= 22.10.0",
  ]

[tool.pytest.ini_options]
minversion = "7.1.1"
addopts = "-rA -q -p no:warnings"
testpaths = ["flows_finder/tests.py"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.black]
line-length = 120
target-version = ["py310"]
preview = true
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.idea
    | \.pytest_cache
    | \.mypy_cache
    | \.vscode
    | \.venv
    | Notebooks
    | build
    | dist
    | docs
    | README.md
    | LICENSE
  )/
)
'''

[tool.mypy]
exclude = 'mpl_toolkits'
implicit_reexport = true

[[tool.mypy.overrides]]
module = [
    'astroquery.logger',
    'astropy.*',
    'mpl_toolkits.*',
    'erfa.*',
    'matplotlib.colors.*',
    'matplotlib.ticker.*',
    'matplotlib.transforms.*',
    'matplotlib._mathtext.*',
    'matplotlib.layout_engine.*',
    'matplotlib.text.*',
    'matplotlib.textpath.*',
    'matplotlib.image.*',
    'matplotlib.patches.*',
    'matplotlib.offsetbox.*',
    'matplotlib.legend.*',
]
ignore_missing_imports = true
ignore_errors = true
allow_untyped_globals = true
implicit_reexport = true